Add hotels implementation. Crash when singing up for the first time

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -14,5 +14,6 @@
         tools:layout="@layout/activity_main" />
 
     <include app:graph="@navigation/auth_graph" />
+    <include app:graph="@navigation/hotels_graph" />
 
 </navigation>
