Add favorites feature and fix BottomNavigationView not navigating between fragments

--- a/app/src/main/res/menu/tabs_menu.xml
+++ b/app/src/main/res/menu/tabs_menu.xml
@@ -5,4 +5,8 @@
         android:title="@string/hotels"
         android:icon="@drawable/hotels_icon"/>
 
+    <item android:id="@id/favorites_graph"
+        android:title="@string/favorites"
+        android:icon="@drawable/favorite_icon"/>
+
 </menu>
