--- a/app/src/main/res/navigation/tabs_graph.xml
+++ b/app/src/main/res/navigation/tabs_graph.xml
@@ -6,5 +6,6 @@
     app:startDestination="@id/hotels_graph">
 
     <include app:graph="@navigation/hotels_graph" />
+    <include app:graph="@navigation/favorites_graph" />
 
 </navigation>
