--- a/app/src/main/res/navigation/tabs_graph.xml
+++ b/app/src/main/res/navigation/tabs_graph.xml
@@ -7,5 +7,6 @@
 
     <include app:graph="@navigation/hotels_graph" />
     <include app:graph="@navigation/favorites_graph" />
+    <include app:graph="@navigation/settings_graph" />
 
 </navigation>
