--- a/feature_hotels/src/main/res/layout/fragment_hotels.xml
+++ b/feature_hotels/src/main/res/layout/fragment_hotels.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="hotels"
+        android:text="@string/hotels"
         android:textSize="78sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
