--- a/feature_favorites/src/main/res/navigation/favorites_graph.xml
+++ b/feature_favorites/src/main/res/navigation/favorites_graph.xml
@@ -8,6 +8,6 @@
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.example.bookgo.feature_favorites.presentation.FavoritesFragment"
-        android:label="FavoritesFragment"
+        android:label="@string/favorites"
         tools:layout="@layout/fragment_favorites"/>
 </navigation>
