--- a/feature_hotels/src/main/res/layout/hotel_item.xml
+++ b/feature_hotels/src/main/res/layout/hotel_item.xml
@@ -14,21 +14,21 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="15dp">
+        android:layout_margin="@dimen/medium"
+        app:cardCornerRadius="@dimen/cardview_radius_big">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/medium">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:elevation="10dp"
-                app:cardCornerRadius="8dp">
+                android:layout_margin="@dimen/small"
+                android:elevation="@dimen/cardview_elevation"
+                app:cardCornerRadius="@dimen/cardview_radius_small">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -54,7 +54,6 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:rating="@{hotel.starRating}"/>
-
 
                     <LinearLayout
                         android:layout_width="match_parent"
