--- a/feature_settings/src/main/res/layout/fragment_settings.xml
+++ b/feature_settings/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textSize="78sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
