Refactor UI overhaul (theme, hotels, search bar)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="splash_background">#26ABFF</color>
+    <color name="main_theme_color">#3F51B5</color>
+    <color name="dark_main_theme_color">#303F9F</color>
+    <color name="secondary_theme_color">#448AFF</color>
 </resources>
