--- a/feature_hotels/src/main/res/layout/fragment_hotels.xml
+++ b/feature_hotels/src/main/res/layout/fragment_hotels.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.hotels.HotelsFragment"
-    android:background="@color/cardview_dark_background">
+    tools:context=".presentation.hotels.HotelsFragment">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
+    <SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hotels"
-        android:textSize="78sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/small"
+        android:layout_marginTop="@dimen/small"
+        android:background="@drawable/search_shape"
+        android:iconifiedByDefault="false"
+        android:queryBackground="@color/transparent"
+        app:layout_constraintBottom_toTopOf="@id/hotels_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,10 +23,29 @@
         android:id="@+id/hotels_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"/>
+        app:layout_constraintTop_toBottomOf="@id/search_view" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--
+
+    set transparent query background
+
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/hotels_recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView"/>
+
+    -->
