--- a/feature_hotels/src/main/res/layout/hotel_item.xml
+++ b/feature_hotels/src/main/res/layout/hotel_item.xml
@@ -13,15 +13,15 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/medium"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/small"
         app:cardCornerRadius="@dimen/cardview_radius_big">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/medium">
+            android:padding="@dimen/small"
+            tools:layout_height="500dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -46,41 +46,209 @@
                         app:layout_constraintTop_toTopOf="parent"
                         tools:background="@android:drawable/sym_def_app_icon" />
 
-                    <RatingBar
-                        android:id="@+id/hotel_rating_bar"
-                        style = "@style/customRatingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:rating="@{hotel.starRating}"/>
-
-                    <LinearLayout
+                    <View
+                        android:id="@+id/white"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:background="@drawable/rectangle_shape"
-                        android:orientation="vertical"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintHeight_percent="0.3"
-                        app:layout_constraintStart_toStartOf="parent">
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                    <TextView
+                        android:id="@+id/item_hotel_name"
+                        style="@style/hotel_header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{hotel.name}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/white"
+                        tools:text="temp hotel name" />
+
+                    <TextView
+                        android:id="@+id/item_hotel_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{hotel.address}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/item_hotel_name"
+                        tools:text="temp hotel address" />
+
+                    <RatingBar
+                        android:id="@+id/hotel_rating_bar"
+                        style="@style/customRatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:rating="@{hotel.starRating}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
+
+</layout>
+
+    <!--
+
+     <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium"
+            app:cardCornerRadius="@dimen/cardview_radius_big">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/medium"
+                tools:layout_height="500dp">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/small"
+                    android:elevation="@dimen/cardview_elevation"
+                    app:cardCornerRadius="@dimen/cardview_radius_small"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/roundedImageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scaleType="centerCrop"
+                            app:imageUrl="@{hotel.images[0]}"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:background="@android:drawable/sym_def_app_icon" />
+
+                        <View
+                            android:id="@+id/white"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:background="@drawable/rectangle_shape"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintHeight_percent="0.3"
+                            app:layout_constraintStart_toStartOf="parent" />
 
                         <TextView
                             android:id="@+id/item_hotel_name"
+                            style="@style/hotel_header"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@{hotel.name}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/white"
                             tools:text="temp hotel name" />
 
                         <TextView
                             android:id="@+id/item_hotel_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@{hotel.address}" />
-                    </LinearLayout>
+                            android:text="@{hotel.address}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/item_hotel_name"
+                            tools:text="temp hotel address" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                        <RatingBar
+                            android:id="@+id/hotel_rating_bar"
+                            style="@style/customRatingBar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:rating="@{hotel.starRating}"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
 
-</layout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+            </FrameLayout>
+        </androidx.cardview.widget.CardView>
+
+    -->
+
+
+    <!--
+
+     <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/medium"
+            app:cardCornerRadius="@dimen/cardview_radius_big">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/medium"
+                tools:layout_height="500dp">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/small"
+                    android:elevation="@dimen/cardview_elevation"
+                    app:cardCornerRadius="@dimen/cardview_radius_small">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/roundedImageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scaleType="centerCrop"
+                            app:imageUrl="@{hotel.images[0]}"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:background="@android:drawable/sym_def_app_icon" />
+
+                        <RatingBar
+                            android:id="@+id/hotel_rating_bar"
+                            style = "@style/customRatingBar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:rating="@{hotel.starRating}"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:background="@drawable/rectangle_shape"
+                            android:orientation="vertical"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintHeight_percent="0.3"
+                            app:layout_constraintStart_toStartOf="parent">
+
+                            <TextView
+                                android:id="@+id/item_hotel_name"
+                                style="@style/hotel_header"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{hotel.name}"
+                                tools:text="temp hotel name" />
+
+                            <TextView
+                                android:id="@+id/item_hotel_address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{hotel.address}" />
+                        </LinearLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    -->
