--- a/feature_hotels/src/main/res/values/styles.xml
+++ b/feature_hotels/src/main/res/values/styles.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="customRatingBar" parent="android:style/Widget.Material.RatingBar.Small">
-        <item name="android:progressBackgroundTint">@color/golden</item>
-        <item name="android:progressTint">@color/golden</item>
+        <item name="android:progressBackgroundTint">@color/black</item>
+        <item name="android:progressTint">@color/black</item>
+    </style>
+
+    <style name="hotel_header">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
