--- a/feature_auth/src/main/res/layout/fragment_sign_in.xml
+++ b/feature_auth/src/main/res/layout/fragment_sign_in.xml
@@ -21,7 +21,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/password_text_input">
+            app:layout_constraintBottom_toTopOf="@id/password_text_input"
+            tools:layout_width="260dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_edit_text"
@@ -29,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:inputType="textEmailAddress"
-                android:imeOptions="actionNext" />
+                android:imeOptions="actionNext"
+                tools:text="@string/field_email"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,7 +44,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/email_text_input"
-            app:layout_constraintBottom_toTopOf="@id/sign_in_button">
+            app:layout_constraintBottom_toTopOf="@id/sign_in_button"
+            tools:layout_width="260dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_edit_text"
@@ -50,7 +53,8 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:inputType="textPassword"
-                android:imeOptions="actionDone" />
+                android:imeOptions="actionDone"
+                tools:text="@string/field_password"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
