Major refactor to authentication. Add Firebase services. Refactor LoginFragment and all its logic.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="textInputStyle">@style/GlobalTextInputStyle</item>
-        <item name="materialButtonStyle">@style/GlobalButtonStyle</item>
+        <item name="colorButtonNormal">@color/main_theme_color</item>
+        <item name="android:textAppearanceButton">@style/GlobalButtonStyle</item>
     </style>
 </resources>
