--- a/feature_auth/src/main/res/layout/fragment_registration.xml
+++ b/feature_auth/src/main/res/layout/fragment_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".presentation.signup.SignUpFragment">
+    tools:context=".presentation.registration.RegistrationFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
-            android:hint="@string/field_repeat_password"
+            android:hint="@string/field_confirm_password"
             app:layout_constraintBottom_toTopOf="@id/create_account_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
