--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/splashFragment">
 
     <include app:graph="@navigation/auth_graph" />
+    <include app:graph="@navigation/tabs_graph" />
 
     <fragment
         android:id="@+id/tabsFragment"
@@ -18,18 +19,18 @@
     </fragment>
 
     <fragment
-        android:id="@+id/loginFragment"
+        android:id="@+id/splashFragment"
         android:name="com.example.bookgo.presentation.splash.SplashFragment"
         android:label="LoginFragment">
         <action
-            android:id="@+id/action_loginFragment_to_auth_graph"
+            android:id="@+id/action_splashFragment_to_auth_graph"
             app:destination="@id/auth_graph"
-            app:popUpTo="@id/loginFragment"
+            app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_loginFragment_to_tabsFragment"
+            android:id="@+id/action_splashFragment_to_tabsFragment"
             app:destination="@id/tabsFragment"
-            app:popUpTo="@id/loginFragment"
+            app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
     </fragment>
 
