--- a/feature_auth/src/main/res/navigation/auth_graph.xml
+++ b/feature_auth/src/main/res/navigation/auth_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/sign_up_fragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="android-app://bookgo.app/sign_in" />
     </fragment>
 
     <fragment
